refactor: corrigir exceptions, models, services e config do backend